new scripts. for easier maintenance (i hope), there are now two main scripts: fedora.sh and mckoi.sh. works more like a runlevel script with start, stop, etc. functions. the start, stop, etc. scripts are now just wrappers that call these new functions. Separated out the Java env tests into set-env.sh, the other scripts source.